<resources>
    <!-- Application -->
    <string name="app_name">Hello Chat</string>

    <!-- Buttons -->
    <string name="loginButton">Login</string>

    <string-array name="query_suggestions">
        <item>Android</item>
        <item>Apple</item>
        <item>iOS</item>
        <item>SCALA</item>
        <item>Ruby</item>
        <item>JavaScript</item>
    </string-array>
    <!-- TextViews -->
    <string name="textViewSplach">© 2017 Penta Value Co.</string>
    <!-- EditTexts -->
    <!-- ChatMessages -->
    <!-- UserErrors -->
    <!-- NetworkConnection -->
    <!-- Activities Names -->

    <string name="splachActivityName">Hello Chat</string>
    <string name="prompt_userName">Email</string>
    <string name="prompt_password">Password</string>
    <string name="checkBox_rememberme_login">Remember me</string>
    <string name="textView_back">Back</string>
    <string name="reg_name">Name</string>
    <string name="reg_password">Password</string>
    <string name="reg_phone">Phone</string>
    <string name="reg_email">Email</string>

    <string name="fieldRequired">Required</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reg_repassword">Repassword</string>
    <string name="login_start">Sign In</string>
    <string name="registration_start">Sign Up</string>
    <string name="invite_button">invite</string>


    <string name="no_internet_connection">No Internet Connection</string>

    <string name="sign_out">Sign Out</string>
    <string name="select_picture_title">Get Photo From</string>
    <string name="sendPhotoGallery">Photo Gallery</string>
    <string name="api_key_google_places">AIzaSyA6JKKD-PdKdtp4eyALp4VSsYleeSBp79g</string>
    <string name="sendLocation">Send Location</string>
    <string name="locationTo">Location To</string>
    <string name="editText_hint">Name (ex: Family)</string>
    <string name="removeGroup">Remove Group</string>
    <string name="addMember">Add Member</string>


</resources>
