<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item android:title="Send Attachment">
        <menu>
            <group android:checkableBehavior="none"
                android:visible="true">
                <item
                    android:title="@string/sendPhotoGallery"
                    android:icon="@drawable/icon_gallery"
                    android:id="@+id/sendPhotoGallery"
                    app:showAsAction="never"/>

                <item
                    android:title="@string/sendLocation"
                    android:id="@+id/sendLocation"
                    android:icon="@drawable/icon_location"
                    app:showAsAction="never"/>

            </group>

        </menu>

    </item>

    <item android:id="@+id/home_menu_setting"
        android:title="Set Wallpaper"

        >
        <menu>

                <group android:checkableBehavior="single"
                    android:menuCategory="system"


                    >
                    <item
                        android:title="RED"
                        android:id="@+id/action_red"
                        android:checked="true"
                        android:icon="@color/redColorLight"
                        app:showAsAction="never"/>
                    <item
                        android:title="GRAY"
                        android:id="@+id/action_gray"
                        android:checked="false"
                        android:icon="@color/dark_gray"

                        app:showAsAction="never"/>
                    <item
                        android:title="BLACK"
                        android:id="@+id/action_black"
                        android:checked="false"
                        android:icon="@color/dark_gray"

                        app:showAsAction="never"/>
                    <item
                        android:title="YELLOW"
                        android:id="@+id/action_yellow"
                        android:checked="false"
                        android:icon="@color/yellowColorLight"

                        app:showAsAction="never"/>
                </group>

        </menu>
    </item>

    <item android:id="@+id/setting_group"
        android:visible="false"
        android:title="Settings">
        <menu>
            <group android:checkableBehavior="none"
                android:visible="true">
                <item
                    android:title="@string/removeGroup"
                    android:icon="@drawable/icon_gallery"
                    android:id="@+id/action_remove_group"
                    app:showAsAction="never"/>

                <item
                    android:title="@string/addMember"
                    android:id="@+id/action_add_member"
                    android:icon="@drawable/icon_location"
                    app:showAsAction="never"/>

            </group>

        </menu>

    </item>


</menu>